--- a/index.html
+++ b/index.html
@@ -2,4 +2,19 @@
 <head>
 <title>about my self </title>
 </head>
-</html>
+ <br>
+  <body>
+    <h1>MY Acadimic information </h1>
+    <br>
+      <p> <strong> Name:Liu das </strong> </p>
+      <p> <strong> Home district:Munshigonj </strong> </p>
+     <br>
+      <thead>
+        <tr>
+          <th> <Strong> NAME OF EXAM </strong> </th>
+          <th> <strong> Passing year </strong> </th>
+          <th> <stromg> institution </strong> </th>
+        </tr>
+       </thead>
+     </body>   
+    
