--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <html>
 <head>
 <title>about my self </title>
+ <style>
+table, th, td {
+  border: px solid blue;
+}
+</style>
 </head>
  <br>
   <body>
