--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>about my self </title>
  <style>
 table, th, td {
-  border: px solid blue;
+  border:1 px solid black ;
 }
 </style>
 </head>
