--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ table, th, td {
        aspect of computer science is problem solving, an essential skill for life.that's why I choose cse.</p> 
    
    
-   <href="page2.html">Go to page page 2 </a>
+   <href="page2.html">Go to page 2 </a>
  </body>
 </html>
           
