--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ table, th, td {
        aspect of computer science is problem solving, an essential skill for life.that's why I choose cse.</p> 
    
    
-       <a href="https://www.w3schools.com/html/">Visit our HTML tutorial</a>
+       <a href="https://www.page2.com/html/">Go to page 2 </a>
    </body>
    </html>
           
