--- a/page2.html
+++ b/page2.html
@@ -8,9 +8,9 @@
  <p>My favourite passtime is <strong> playing cricket, watching movie, reading book,listening songs.</strong> </p>
  <br>
  <h2>MY FAVOURITE BOOK </h2>
+ <img src="2.jpg" />
  <p>My favourite book is a novel by <strong> The Remains of the day </strong>.The novel by the Nobel Prize-winning
  British author Kazuo Ishiguro </strong> </p>
- <br>
  
  <br>
  <h3> My FAVOURITE SPORTS </h3>
