--- a/page2.html
+++ b/page2.html
@@ -10,13 +10,15 @@
  <h2>MY FAVOURITE BOOK </h2>
  <p>My favourite book is a novel by <strong> The Remains of the day </strong>.The novel by the Nobel Prize-winning
  British author Kazuo Ishiguro </strong> </p>
-<img src="2.jpg" />
+<img src="2.jpg" alt = "image not found" />
  
  <br>
  <h3> My FAVOURITE SPORTS </h3>
+<img src="bd_cricket_team.jpg" alt = "image not found" />
  <p>My favourite sports is <strong> Cricket </strong>.My favourite team is <strong> BANGLADESH <strong> </p>
  <br>
  <h4>MY FAVOURITE MOVIE </h4>
+  <img src="ShawshankRedemptionMoviePoster.jpg" alt = "image not found" />
  <p>My favourite movie is <strong> The shawshank redemtion </strong>.The direct of the movie is < strong> FRANK DARABONT </strong> </p> 
  <br>
  
